--- a/Templates/Exetension.html
+++ b/Templates/Exetension.html
@@ -25,7 +25,7 @@
 
     <script>
         // Use fetch to load the content of sidebar.html
-        fetch('../Sidebar.html')
+        fetch('../Sidebar-For-Exetension.html')
             .then(response => response.text())
             .then(html => {
                 // Insert the loaded content into the document
